fixed footer social top spacing on large

--- a/assets/styles/styles-programming.css
+++ b/assets/styles/styles-programming.css
@@ -1287,13 +1287,15 @@ nav.ul::after {
  }
 @media (min-width: 1024px) {
 .footer {
-    margin-top: 0
+    margin-top: 0;
+    padding-top: 150px
 }
  }
 @media (min-width: 1200px) {
 .footer {
     -webkit-clip-path: none;
             clip-path: none;
+     padding-top: 110px;
     -webkit-transform: skewY(-2deg);
             transform: skewY(-2deg)
 }
